infra/k8s/auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-depl
spec:
  replicas: 1 # Number of pod
  selector: 
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers: 
        - name: auth
          image: hoangdnguyen7089/auth
---
# Configuration for Cluster IP:
apiVersion: v1
kind: Service
metadata:
  name: auth-srv
spec:
  selector:
    app: auth
  # Default ClusterIP
  type: ClusterIP  
  ports:
    - name: auth
      protocol: TCP
      port: 3000
      targetPort: 3000
